--- a/ManagerAPI.Backend/appsettings.Development.json
+++ b/ManagerAPI.Backend/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8000"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,11 +14,13 @@
     }
   },
   "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=manager;password=Abc123456;Persist Security Info=False; Connect Timeout=300",
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
     "JwtSecret": "0123456789012345678901Manager",
-    "ClientURL": "http://localhost:4200"
+    "ClientUrl": "http://localhost:5000",
+    "SecureClientUrl": "https://localhost:5001"
   },
   "MailSettings": {
     "Mail" : "noreply@karcags.eu",
@@ -19,5 +28,10 @@
     "Password": "",
     "Host": "localhost",
     "Port" : 587
+  },
+  "Urls": "https://localhost:8001;http://localhost:8000",
+  "Jwt": {
+    "Issuer": "karcags.hu",
+    "Key": "UniHelperSecretKey"
   }
 }
