--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:9920"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,11 +15,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=manager;password=Abc123456;Persist Security Info=False; Connect Timeout=300",
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
     "JwtSecret": "0123456789012345678901Manager",
-    "ClientURL": "http://localhost:4200"
+    "ClientUrl": "http://207.154.239.183:9000",
+    "SecureClientUrl": "https://207.154.239.183:9001"
   },
   "MailSettings": {
     "Mail" : "noreply@karcags.eu",
@@ -20,5 +29,10 @@
     "Password": "",
     "Host": "localhost",
     "Port" : 587
+  },
+  "Urls": "https://207.154.239.183:9921;http://207.154.239.183:9920",
+  "Jwt": {
+    "Issuer": "karcags.hu",
+    "Key": "UniHelperSecretKey"
   }
 }
