--- a/ManagerAPI.DataAccess/ManagerAPI.DataAccess.csproj
+++ b/ManagerAPI.DataAccess/ManagerAPI.DataAccess.csproj
@@ -1,26 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <Version>0.7.3</Version>
         <Authors>karcagtamas@outlook.com</Authors>
         <Company>karcags</Company>
         <PackageVersion>1.0.0</PackageVersion>
+        <LangVersion>default</LangVersion>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\netcoreapp3.1\ManagerAPI.DataAccess.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\netcoreapp3.1\ManagerAPI.DataAccess.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.5" />
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
+      <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
     </ItemGroup>
 
     <ItemGroup>
