--- a/ManagerAPI.Domain/ManagerAPI.Domain.csproj
+++ b/ManagerAPI.Domain/ManagerAPI.Domain.csproj
@@ -1,15 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <Version>0.7.3</Version>
         <Authors>karcagtamas@outlook.com</Authors>
         <Company>karcags</Company>
         <PackageVersion>1.0.0</PackageVersion>
+        <LangVersion>default</LangVersion>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\netcoreapp3.1\ManagerAPI.Domain.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\netcoreapp3.1\ManagerAPI.Domain.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.5" />
     </ItemGroup>
 
     <ItemGroup>
