--- a/ManagerAPI.Services/ManagerAPI.Services.csproj
+++ b/ManagerAPI.Services/ManagerAPI.Services.csproj
@@ -1,20 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <Version>0.7.3</Version>
         <Authors>karcagtamas@outlook.com</Authors>
         <Company>karcags</Company>
         <PackageVersion>1.0.0</PackageVersion>
+        <LangVersion>default</LangVersion>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\net5.0\ManagerAPI.Services.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\net5.0\ManagerAPI.Services.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="10.0.0" />
-      <PackageReference Include="ClosedXML" Version="0.95.3" />
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="ClosedXML" Version="0.95.4" />
       <PackageReference Include="DinkToPdf" Version="1.0.8" />
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
       <PackageReference Include="System.Collections" Version="4.3.0" />
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
     </ItemGroup>
 
     <ItemGroup>
