--- a/EventManager.Client/EventManager.Client.csproj
+++ b/EventManager.Client/EventManager.Client.csproj
@@ -19,6 +19,12 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Update="wwwroot\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
