--- a/ManagerAPI.Backend/appsettings.Development.json
+++ b/ManagerAPI.Backend/appsettings.Development.json
@@ -32,6 +32,6 @@
   "Urls": "https://localhost:8001;http://localhost:8000",
   "Jwt": {
     "Issuer": "karcags.hu",
-    "Key": "UniHelperSecretKey"
+    "Key": "ManagerAPISecretKey"
   }
 }
