--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -33,6 +33,6 @@
   "Urls": "https://207.154.239.183:9921;http://207.154.239.183:9920",
   "Jwt": {
     "Issuer": "karcags.hu",
-    "Key": "UniHelperSecretKey"
+    "Key": "ManagerAPISecretKey"
   }
 }
