--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -2,7 +2,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://0.0.0.0:9920"
+        "Url": "http://0.0.0.0:9940"
       }
     }
   },
@@ -15,22 +15,22 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=manager;password=Abc123456;Persist Security Info=False; Connect Timeout=300",
+    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=manager;password=Manager123456%;Persist Security Info=False; Connect Timeout=300",
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
     "JwtSecret": "0123456789012345678901Manager",
-    "ClientUrl": "http://207.154.239.183:9000",
-    "SecureClientUrl": "https://207.154.239.183:9001"
+    "ClientUrl": "http://207.154.239.183:9700",
+    "SecureClientUrl": "https://207.154.239.183:9701"
   },
   "MailSettings": {
-    "Mail" : "noreply@karcags.eu",
+    "Mail": "noreply@karcags.eu",
     "DisplayName": "Manager",
     "Password": "",
     "Host": "localhost",
-    "Port" : 587
+    "Port": 587
   },
-  "Urls": "https://207.154.239.183:9921;http://207.154.239.183:9920",
+  "Urls": "https://207.154.239.183:9941;http://207.154.239.183:9940",
   "Jwt": {
     "Issuer": "karcags.hu",
     "Key": "ManagerAPISecretKey"
