--- a/.github/workflows/DeployFrontend.yml
+++ b/.github/workflows/DeployFrontend.yml
@@ -39,4 +39,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.PASS }}
-          script: cp -R /var/www/eventmanager/EventManager.Client/bin/Release/net5.0/publish/* /var/www/unihelper/ && rm -Rf /var/www/eventmanager/EventManager.Client
+          script: cp -R /var/www/eventmanager/EventManager.Client/bin/Release/net5.0/publish/* /var/www/eventmanager/ && rm -Rf /var/www/eventmanager/EventManager.Client
