--- a/ManagerAPI.Backend/appsettings.Development.json
+++ b/ManagerAPI.Backend/appsettings.Development.json
@@ -18,9 +18,7 @@
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
-    "JwtSecret": "0123456789012345678901Manager",
-    "ClientUrl": "http://localhost:5000",
-    "SecureClientUrl": "https://localhost:5001"
+    "JwtSecret": "0123456789012345678901Manager"
   },
   "MailSettings": {
     "Mail": "noreply@karcags.eu",
@@ -33,5 +31,7 @@
   "Jwt": {
     "Issuer": "karcags.hu",
     "Key": "ManagerAPISecretKey"
-  }
+  },
+  "ClientUrl": "http://localhost:5000",
+  "SecureClientUrl": "https://localhost:5001"
 }
