--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -19,9 +19,7 @@
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
-    "JwtSecret": "0123456789012345678901Manager",
-    "ClientUrl": "http://207.154.239.183:9700",
-    "SecureClientUrl": "https://207.154.239.183:9701"
+    "JwtSecret": "0123456789012345678901Manager"
   },
   "MailSettings": {
     "Mail": "noreply@karcags.eu",
@@ -34,5 +32,7 @@
   "Jwt": {
     "Issuer": "karcags.hu",
     "Key": "ManagerAPISecretKey"
-  }
+  },
+  "ClientUrl": "http://207.154.239.183:9700",
+  "SecureClientUrl": "https://207.154.239.183:9701"
 }
