--- a/ManagerAPI.Backend/appsettings.Development.example
+++ b/ManagerAPI.Backend/appsettings.Development.example
@@ -15,7 +15,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=UniHelper;user=unihelper;password=<Password>;Persist Security Info=False; Connect Timeout=300",
+    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=manager;password=<Password>;Persist Security Info=False; Connect Timeout=300",
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True",
     "ManagerDb": "Server=localhost;Database=PlanManagerDb;User Id=SA;password=<Jelszó>;Trusted_Connection=False;MultipleActiveResultSets=true;"
   },
