--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -33,6 +33,6 @@
     "Issuer": "karcags.hu",
     "Key": "ManagerAPISecretKey"
   },
-  "ClientUrl": "http://207.154.239.183:9700",
-  "SecureClientUrl": "https://207.154.239.183:9701"
+  "ClientUrl": "http://karcags.eu:9700",
+  "SecureClientUrl": "https://karcags.eu:9701"
 }
