--- a/ManagerAPI.Backend/appsettings.json
+++ b/ManagerAPI.Backend/appsettings.json
@@ -15,7 +15,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=root;password=;Persist Security Info=False; Connect Timeout=300",
+    "DefaultConnection": "server=localhost;port=3306;database=ManagerDb;user=root;password=root;Persist Security Info=False; Connect Timeout=300",
     "ManagerDb": "Server=(local)\\sqlexpress;Database=ManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "ApplicationSettings": {
