--- a/.github/workflows/DeployBackend.yml
+++ b/.github/workflows/DeployBackend.yml
@@ -30,8 +30,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.PASS }}
-          source: 'ManagerAPI.Backend/bin/Release/net5.0/publish/*'
-          target: '/var/www/manager-backend/'
+          source: "ManagerAPI.Backend/bin/Release/net6.0/publish/*"
+          target: "/var/www/manager-backend/"
       - name: Fix copy
         uses: appleboy/ssh-action@master
         with:
@@ -39,4 +39,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.PASS }}
-          script: mv /var/www/manager-backend/ManagerAPI.Backend /var/www/manager-backend/ManagerAPI && cp -R /var/www/manager-backend/ManagerAPI/bin/Release/net5.0/publish/* /var/www/manager-backend/ && rm -Rf /var/www/manager-backend/ManagerAPI
+          script: mv /var/www/manager-backend/ManagerAPI.Backend /var/www/manager-backend/ManagerAPI && cp -R /var/www/manager-backend/ManagerAPI/bin/Release/net6.0/publish/* /var/www/manager-backend/ && rm -Rf /var/www/manager-backend/ManagerAPI
