--- a/EventManager.Client/wwwroot/appsettings.Development.json
+++ b/EventManager.Client/wwwroot/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "apiUrl": "https://localhost:8000/api",
   "Api": "http://localhost:8000",
-  "SecureApi": "https://localhost:8001"
+  "SecureApi": "https://localhost:8001",
+  "RefreshUri": "https://localhost:8001/api/Auth/Refresh?refreshToken=:refreshToken&clientId=:clientId"
 }
