--- a/EventManager.Client/wwwroot/appsettings.json
+++ b/EventManager.Client/wwwroot/appsettings.json
@@ -1,5 +1,6 @@
 {
   "apiUrl": "https://192.168.1.80:7222/api",
   "Api": "http://207.154.239.183:9940",
-  "SecureApi": "https://207.154.239.183:9941"
+  "SecureApi": "https://207.154.239.183:9941",
+  "RefreshUri": "https://207.154.239.183:9941/api/Auth/Refresh?refreshToken=:refreshToken&clientId=:clientId"
 }
