--- a/ManagerAPI.Backend/appsettings.Development.example
+++ b/ManagerAPI.Backend/appsettings.Development.example
@@ -33,7 +33,6 @@
   "Urls": "https://localhost:8001;http://localhost:8000",
   "Jwt": {
     "Issuer": "karcags.hu",
-    "Key": "UniHelperSecretKey",
-    "JwtSecret": "0123456789012345678901Manager"
+    "Key": "0123456789012345678901Manager"
   }
 }
