--- a/ManagerAPI.Shared/ManagerAPI.Shared.csproj
+++ b/ManagerAPI.Shared/ManagerAPI.Shared.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+		<PackageReference Include="KarcagS.Shared" Version="2.0.2" />
 	</ItemGroup>
 
 </Project>
